--- a/package.json
+++ b/package.json
@@ -12,11 +12,19 @@
     "@heroicons/react": "^2.1.3",
     "@tsparticles/engine": "^3.4.0",
     "@tsparticles/react": "^3.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.13",
+    "lucide-react": "^0.402.0",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18",
+    "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.2.1",
     "react-type-animation": "^3.2.0",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "tsparticles": "^3.4.0"
   },
   "devDependencies": {
@@ -27,7 +35,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
 }
